<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalyzeFragment">

<com.github.mikephil.charting.charts.LineChart
android:id="@+id/chart1"
android:layout_width="300dp"
android:layout_height="300dp"
android:layout_weight="1"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" >

</com.github.mikephil.charting.charts.LineChart>

<com.github.mikephil.charting.charts.LineChart
android:id="@+id/chart2"
android:layout_width="300dp"
android:layout_height="300dp"
android:layout_weight="1"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.github.mikephil.charting.charts.LineChart>

<com.github.mikephil.charting.charts.LineChart
android:id="@+id/chart4"
android:layout_width="300dp"
android:layout_height="300dp"
android:layout_weight="1"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<com.github.mikephil.charting.charts.LineChart
android:id="@+id/chart5"
android:layout_width="300dp"
android:layout_height="300dp"
android:layout_weight="1"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:src="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart3" />

<TextView
android:id="@+id/textView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/anger"
app:layout_constraintBottom_toBottomOf="@+id/imageView"
app:layout_constraintStart_toEndOf="@+id/imageView" />

<TextView
android:id="@+id/textView4"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/sadness"
app:layout_constraintBottom_toBottomOf="@+id/imageView9"
app:layout_constraintStart_toEndOf="@+id/imageView9" />

<TextView
android:id="@+id/textView5"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/fear"
app:layout_constraintBottom_toBottomOf="@+id/imageView10"
app:layout_constraintStart_toEndOf="@+id/imageView10" />

<TextView
android:id="@+id/textView6"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/joy"
app:layout_constraintBottom_toBottomOf="@+id/imageView8"
app:layout_constraintStart_toEndOf="@+id/imageView8" />

<TextView
android:id="@+id/textView7"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/confident"
app:layout_constraintBottom_toBottomOf="@+id/imageView7"
app:layout_constraintStart_toEndOf="@+id/imageView7" />

<ImageView
android:id="@+id/imageView7"
android:layout_width="10dp"
android:layout_height="10dp"
android:layout_marginStart="60dp"
android:src="@android:color/holo_green_dark"
app:layout_constraintBottom_toBottomOf="@+id/imageView8"
app:layout_constraintStart_toStartOf="@+id/textView6" />

<ImageView
android:id="@+id/imageView8"
android:layout_width="10dp"
android:layout_height="10dp"
android:layout_marginStart="60dp"
android:src="@android:color/holo_orange_light"
app:layout_constraintBottom_toBottomOf="@+id/imageView10"
app:layout_constraintStart_toStartOf="@+id/textView5" />

<ImageView
android:id="@+id/imageView9"
android:layout_width="10dp"
android:layout_height="10dp"
android:layout_marginStart="60dp"
android:src="@android:color/holo_blue_dark"
app:layout_constraintBottom_toBottomOf="@+id/textView"
app:layout_constraintStart_toEndOf="@+id/imageView" />

<ImageView
android:id="@+id/imageView10"
android:layout_width="10dp"
android:layout_height="10dp"
android:layout_marginStart="60dp"
android:src="@android:color/holo_purple"
app:layout_constraintBottom_toBottomOf="@+id/imageView9"
app:layout_constraintStart_toEndOf="@+id/imageView9" />

    <TextView
        android:id="@+id/stress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>